# Sol_Voice_Tuner

./: .gitignore  CMakeLists.txt  README.md  build-and-launch.bat  build-and-launch.ps1
.cursor/rules/: auto-build.mdc
Source/: EffectChain.h  EffectDetailPage.h  EffectsWindowPage.h  HarmoniesWindowPage.h  HomePage.h  LegacyTunerPage.cpp  LegacyTunerPage.h  MeterSidebar.h  OscilloscopeComponent.cpp  OscilloscopeComponent.h  PageStack.h  PitchBendFader.h  PitchDetector.cpp  PitchDetector.h  PitchShifter.cpp  PitchShifter.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  ScaleQuantizer.h  SolLookAndFeel.h  SolPage.h  TuningWindowPage.h  VocalFx.h  WheelComponent.h
tools/: KeyDumpConsole.cpp
